--- a/pbLCD/scss/08_highContrust.scss
+++ b/pbLCD/scss/08_highContrust.scss
@@ -1,68 +1,81 @@
-@media screen {
-    .jsCanRotate {
-    /* //_{#can-content */
-        [pbTip]:after {
-            width        : 4px;
-            height       : 4px;
-            border-width : 0 0 1px 1px;
-        }
-        [pbTip~=_]:after {
-            width        : 4px;
-            height       : 4px;
-            border-width : 1px 1px 0 0;
-        }
-        [pbTip]:after {
-            /* //_{@modern */
-            transform     : rotate(-45deg);
-            /* //_}@modern */
-            /* //_{@ie9 */
-            -ms-transform : rotate(-45deg);
-            /* //_}@ie9 */
-            /* //_{@ie8 */
-            filter : progid:DXImageTransform.Microsoft.Matrix(M11=1,M22=1,M12=1,M21=-1,sizingMethod="auto expand");
-            /* //_}@ie8 */      
-        }
-    /* //_}#can-content */
+/* //_{+weak-reset */ /* web-doc-base サイトに埋め込む場合は dark_theme を使用するが、単独で使用する場合は不適 */
+@include highContrastForIEGte9Gecko {
+/* //_}+weak-reset */
+    /* //_{^+weak-reset */
+    @media screen {
+    /* //_}^+weak-reset */
+        .jsCanRotate {
+        /* //_{#can-content */
+            [pbTip]:after {
+                width        : 4px;
+                height       : 4px;
+                border-width : 0 0 1px 1px;
+            }
+            [pbTip~=_]:after {
+                width        : 4px;
+                height       : 4px;
+                border-width : 1px 1px 0 0;
+            }
+            [pbTip]:after {
+                /* //_{@modern */
+                transform     : rotate(-45deg);
+                /* //_}@modern */
+                /* //_{@ie9 */
+                -ms-transform : rotate(-45deg);
+                /* //_}@ie9 */
+                /* //_{@ie8 */
+                filter : progid:DXImageTransform.Microsoft.Matrix(M11=1,M22=1,M12=1,M21=-1,sizingMethod="auto expand");
+                /* //_}@ie8 */      
+            }
+        /* //_}#can-content */
 
-    /* //_{^#can-content */
-        .pbTip {
-            width        : 4px;
-            height       : 4px;
-            border-width : 0 0 1px 1px;
+        /* //_{^#can-content */
+            .pbTip {
+                width        : 4px;
+                height       : 4px;
+                border-width : 0 0 1px 1px;
+            }
+            .pbTipBtm {
+                width        : 4px;
+                height       : 4px;
+                border-width : 1px 1px 0 0;
+            }
+            .pbTip, .pbTipBtm {
+                /* //_{@ie55,@ie6,@ie7 */
+                filter : progid:DXImageTransform.Microsoft.Matrix(M11=1,M22=1,M12=1,M21=-1,sizingMethod="auto expand");
+                /* //_}@ie55,@ie6,@ie7 */
+            }
+        /* //_}^#can-content */
         }
-        .pbTipBtm {
-            width        : 4px;
-            height       : 4px;
-            border-width : 1px 1px 0 0;
-        }
-        .pbTip, .pbTipBtm {
-            /* //_{@ie55,@ie6,@ie7 */
-            filter : progid:DXImageTransform.Microsoft.Matrix(M11=1,M22=1,M12=1,M21=-1,sizingMethod="auto expand");
-            /* //_}@ie55,@ie6,@ie7 */
-        }
-    /* //_}^#can-content */
-    }
+        .jsHcm, .jsHcmWob, .jsHcmBow {
+        /* //_{#can-attr-selector */
+            [pbTip]:hover, [pbTip]:active
+                /* //_{#can-target-pseudo-class */
+                , [pbTip]:target
+                /* //_}#can-target-pseudo-class */
+                /* //_{#can-focus-pseudo-class */
+                , [pbTip]:focus
+                /* //_}#can-focus-pseudo-class */
+                {
+                    /* //_{+weak-reset */
+                    background-color : transparent !important;
+                    /* //_}+weak-reset */
+                    outline    : 0;
+                    b { outline: 2px solid; }
+                }
+        /* //_}#can-attr-selector */
 
-    .jsHcm, .jsHcmWob, .jsHcmBow {
-    /* //_{#can-attr-selector */
-        [pbTip]:hover, [pbTip]:active
-            /* //_{#can-target-pseudo-class */
-            , [pbTip]:target
-            /* //_}#can-target-pseudo-class */
-            /* //_{#can-focus-pseudo-class */
-            , [pbTip]:focus
-            /* //_}#can-focus-pseudo-class */
-            {
-                background : none;
+        /* //_{^#can-attr-selector */
+            .pbLCD a:hover, .pbLCD a:active {
+                /* //_{+weak-reset */
+                background-color : transparent !important;
+                /* //_}+weak-reset */
+                outline    : 0;
                 b { outline: 2px solid; }
             }
-    /* //_}#can-attr-selector */
-
-    /* //_{^#can-attr-selector */
-        .pbLCD a:hover, .pbLCD a:active {
-            background : none;
-            b { outline: 2px solid; }
+        /* //_}^#can-attr-selector */
         }
-    /* //_}^#can-attr-selector */
     }
+/* //_{ */
 }
+/* //_} */
